removed extra comma

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors": [
         {
             "name": "Rémy Sanchez",
-            "email": "thenux@gmail.com",
+            "email": "thenux@gmail.com"
         }
     ],
     "require": {
